@@ -1,7 +1,7 @@
 /**
  * Author : Gérald FENOY
  *
- * Copyright (c) 2009-2012 GeoLabs SARL
+ * Copyright (c) 2009-2013 GeoLabs SARL
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -24,6 +24,17 @@
 
 #include "service_internal_python.h"
 
+struct module_state {
+    PyObject *error;
+};
+
+#if PY_MAJOR_VERSION >= 3
+#define GETSTATE(m) ((struct module_state*)PyModule_GetState(m))
+#else
+#define GETSTATE(m) (&_state)
+static struct module_state _state;
+#endif
+
 static PyObject* ZooError;
 
 PyMethodDef zooMethods[] = {
@@ -32,32 +43,80 @@ PyMethodDef zooMethods[] = {
   {NULL, NULL, 0, NULL} /* tempt not the blade, all fear the sentinel */
 };
 
+#if PY_MAJOR_VERSION >= 3
+
+static int myextension_traverse(PyObject *m, visitproc visit, void *arg) {
+  Py_VISIT(GETSTATE(m)->error);
+  return 0;
+}
+
+static int myextension_clear(PyObject *m) {
+  Py_CLEAR(GETSTATE(m)->error);
+  return 0;
+}
+
+static struct PyModuleDef moduledef = {
+  PyModuleDef_HEAD_INIT,
+  "zoo",
+  NULL,
+  sizeof(struct module_state),
+  zooMethods,
+  NULL,
+  myextension_traverse,
+  myextension_clear,
+  NULL
+};
+#endif
+
 PyMODINIT_FUNC init_zoo(){
   PyObject *tmp,*d;
-  PyObject* module = Py_InitModule("zoo", zooMethods);
-  if (module == NULL)
+  PyObject *module = 
+#if PY_MAJOR_VERSION >= 3
+    PyModule_Create(&moduledef);
+#else
+    Py_InitModule("zoo", zooMethods);
+#endif
+  if (module == NULL){
+#if PY_MAJOR_VERSION >= 3
+    return NULL;
+#else
     return;
-  
+#endif
+  }
+
+  struct module_state *st = GETSTATE(module);
+
   d = PyModule_GetDict(module);
+#if PY_MAJOR_VERSION >= 3
+  tmp = PyLong_FromLong(3);
+#else
   tmp = PyInt_FromLong(3);
+#endif
   PyDict_SetItemString(d, "SERVICE_SUCCEEDED", tmp);
   Py_DECREF(tmp);
 
+#if PY_MAJOR_VERSION >= 3
+  tmp = PyLong_FromLong(4);
+#else
   tmp = PyInt_FromLong(4);
+#endif
   PyDict_SetItemString(d, "SERVICE_FAILED", tmp);
   Py_DECREF(tmp);
 
   ZooError = PyErr_NewException("zoo.error", NULL, NULL);
   Py_INCREF(ZooError);
   PyModule_AddObject(module, "error", ZooError);
+#if PY_MAJOR_VERSION >= 3
+  return module;
+#endif
 }
 
 int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inputs,maps **real_outputs){
   maps* m=*main_conf;
   maps* inputs=*real_inputs;
   maps* outputs=*real_outputs;
-  char ntmp[1024];
-  getcwd(ntmp,1024);
+  map* tmp0=getMapFromMaps(*main_conf,"lenv","cwd");
+  char *ntmp=tmp0->value;
   map* tmp=NULL;
   tmp=getMapFromMaps(*main_conf,"env","PYTHONPATH");
   char *python_path;
@@ -77,19 +136,23 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
   }
   tmp=NULL;
   tmp=getMap(request,"metapath");
-  char *pythonpath=(char*)malloc((1+strlen(python_path)+2048)*sizeof(char));
-  if(tmp!=NULL && strcmp(tmp->value,"")!=0)
+  char *pythonpath;//=(char*)malloc((1+strlen(python_path)+2048)*sizeof(char));
+  if(tmp!=NULL && strcmp(tmp->value,"")!=0){
+    pythonpath=(char*)malloc((4+strlen(python_path)+strlen(ntmp)+strlen(tmp->value))*sizeof(char));
 #ifdef WIN32
     sprintf(pythonpath,"%s/%s/;%s",ntmp,tmp->value,python_path);
 #else
-  sprintf(pythonpath,"%s/%s/:%s",ntmp,tmp->value,python_path);
+    sprintf(pythonpath,"%s/%s/:%s",ntmp,tmp->value,python_path);
 #endif
-  else
+  }
+  else{
+    pythonpath=(char*)malloc((2+strlen(python_path)+strlen(ntmp))*sizeof(char));
 #ifdef WIN32
     sprintf(pythonpath,"%s;%s",ntmp,python_path);
 #else
-  sprintf(pythonpath,"%s:%s",ntmp,python_path);
+    sprintf(pythonpath,"%s:%s",ntmp,python_path);
 #endif
+  }
 #ifdef DEBUG
     fprintf(stderr,"PYTHONPATH=%s\n",pythonpath);
 #endif
@@ -105,9 +168,18 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
   free(pythonpath);
 
   PyThreadState *mainstate;
+#if PY_MAJOR_VERSION >= 3
+  PyImport_AppendInittab("zoo", init_zoo);
+#else
   PyEval_InitThreads();
+#endif
   Py_Initialize();
+#if PY_MAJOR_VERSION >= 3
+  PyEval_InitThreads();
+  PyImport_ImportModule("zoo");
+#else
   init_zoo();
+#endif
   mainstate = PyThreadState_Swap(NULL);
   PyEval_ReleaseLock();
   PyGILState_STATE gstate;
@@ -115,7 +187,12 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
   PyObject *pName, *pModule, *pFunc;
   tmp=getMap(s->content,"serviceProvider");
   if(tmp!=NULL)
-    pName = PyString_FromString(tmp->value);
+    pName = 
+#if PY_MAJOR_VERSION >= 3
+      PyUnicode_FromString(tmp->value);
+#else
+      PyString_FromString(tmp->value);
+#endif
   else{
     map* err=createMap("text","Unable to parse serviceProvider please check your zcfg file.");
     addToMap(err,"code","NoApplicableCode");
@@ -144,7 +221,11 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
 #endif
       pValue = PyObject_CallObject(pFunc, pArgs);
       if (pValue != NULL) {
+#if PY_MAJOR_VERSION >= 3
+	res=PyLong_AsLong(pValue);
+#else
 	res=PyInt_AsLong(pValue);
+#endif
 	freeMaps(real_outputs);
 	free(*real_outputs);
 	freeMaps(main_conf);
@@ -152,7 +233,11 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
 	*main_conf=mapsFromPyDict(arg1);
 	*real_outputs=mapsFromPyDict(arg3);
 #ifdef DEBUG
+#if PY_MAJOR_VERSION >= 3
+	fprintf(stderr,"Result of call: %i\n", PyLong_AsLong(pValue));
+#else
 	fprintf(stderr,"Result of call: %i\n", PyInt_AsLong(pValue));
+#endif
 	dumpMaps(inputs);
 	dumpMaps(*real_outputs);
 #endif
@@ -161,22 +246,39 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
 	PyErr_Fetch(&ptype, &pvalue, &ptraceback);
 	PyObject *trace=PyObject_Str(pvalue);
 	char pbt[10240];
+#if PY_MAJOR_VERSION >= 3
+	if(PyUnicode_Check(trace))
+	  sprintf(pbt,"TRACE : %s",_PyUnicode_AsString(trace));
+#else
 	if(PyString_Check(trace))
 	  sprintf(pbt,"TRACE : %s",PyString_AsString(trace));
+#endif
 	else
 	  fprintf(stderr,"EMPTY TRACE ?");
 	trace=NULL;
 	trace=PyObject_Str(ptype);
+#if PY_MAJOR_VERSION >= 3
+	if(PyUnicode_Check(trace)){
+#else
 	if(PyString_Check(trace)){
+#endif
 	  char *tpbt=strdup(pbt);
+#if PY_MAJOR_VERSION >= 3
+	  sprintf(pbt,"%s\n%s\0",tpbt,_PyUnicode_AsString(trace));
+#else
 	  sprintf(pbt,"%s\n%s\0",tpbt,PyString_AsString(trace));
+#endif
 	  free(tpbt);
 	}
 	else
 	  fprintf(stderr,"EMPTY TRACE ?");
 	
 	char *tpbt=strdup(pbt);
+#if PY_MAJOR_VERSION >= 3
+	pName = PyUnicode_FromString("traceback");
+#else
 	pName = PyString_FromString("traceback");
+#endif
 	pModule = PyImport_Import(pName);
 	pArgs = PyTuple_New(1);
 	PyTuple_SetItem(pArgs, 0, ptraceback);
@@ -184,8 +286,13 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
 	pValue = PyObject_CallObject(pFunc, pArgs);
 	trace=NULL;
 	trace=PyObject_Str(pValue);
+#if PY_MAJOR_VERSION >= 3
+	if(PyUnicode_Check(trace))
+	  sprintf(pbt,"%s\nUnable to run your python process properly. Please check the following messages : %s",tpbt,_PyUnicode_AsString(trace));
+#else
 	if(PyString_Check(trace))
 	  sprintf(pbt,"%s\nUnable to run your python process properly. Please check the following messages : %s",tpbt,PyString_AsString(trace));
+#endif
 	else
 	  sprintf(pbt,"%s \n Unable to run your python process properly. Unable to provide any futher informations. %s",tpbt);
 	free(tpbt);
@@ -213,8 +320,10 @@ int zoo_python_support(maps** main_conf,map* request,service* s,maps **real_inpu
     res=-1;
     //exit(-1);
   } 
+#if PY_MAJOR_VERSION < 3
   PyGILState_Release(gstate);
   PyEval_AcquireLock();
+#endif
   PyThreadState_Swap(mainstate);
   Py_Finalize();
   return res;
@@ -225,7 +334,12 @@ PyDictObject* PyDict_FromMaps(maps* t){
   maps* tmp=t;
   while(tmp!=NULL){
     PyObject* value=(PyObject*)PyDict_FromMap(tmp->content);
-    PyObject* name=PyString_FromString(tmp->name);
+    PyObject* name=
+#if PY_MAJOR_VERSION >= 3
+      PyUnicode_FromString(tmp->name);
+#else
+      PyString_FromString(tmp->name);
+#endif
     if(PyDict_SetItem(res,name,value)<0){
       fprintf(stderr,"Unable to set map value ...");
       return NULL;
@@ -244,7 +358,12 @@ PyDictObject* PyDict_FromMap(map* t){
   map* size=getMap(tmp,"size");
   map* tmap=getMapType(tmp);
   while(tmp!=NULL){
-    PyObject* name=PyString_FromString(tmp->name);
+    PyObject* name=
+#if PY_MAJOR_VERSION >= 3
+      PyUnicode_FromString(tmp->name);
+#else
+      PyString_FromString(tmp->name);
+#endif
     if(strcasecmp(tmp->name,"value")==0) {
       if(isArray!=NULL){
 	map* len=getMap(tmp,"length");
@@ -263,12 +382,21 @@ PyDictObject* PyDict_FromMap(map* t){
 	    PyObject* lvalue;
 	    PyObject* lsvalue;
 	    if(sMap==NULL){
+#if PY_MAJOR_VERSION >= 3
+	      lvalue=PyUnicode_FromString(vMap->value);
+#else
 	      lvalue=PyString_FromString(vMap->value);
+#endif
 	      lsvalue=Py_None;
 	    }
 	    else{
+#if PY_MAJOR_VERSION >= 3
+	      lvalue=PyUnicode_FromStringAndSize(vMap->value,atoi(sMap->value));
+	      lsvalue=PyUnicode_FromString(sMap->value);
+#else
 	      lvalue=PyString_FromStringAndSize(vMap->value,atoi(sMap->value));
 	      lsvalue=PyString_FromString(sMap->value);
+#endif
 	      hasSize=1;
 	    }
 
@@ -285,7 +413,11 @@ PyDictObject* PyDict_FromMap(map* t){
 	  map* mMap=getMapArray(tmp,tmap->name,i);
 	  PyObject* lmvalue;
 	  if(mMap!=NULL){
+#if PY_MAJOR_VERSION >= 3
+	    lmvalue=PyUnicode_FromString(mMap->value);
+#else
 	    lmvalue=PyString_FromString(mMap->value);
+#endif
 	  }else
 	    lmvalue=Py_None;
 	  
@@ -300,25 +432,43 @@ PyDictObject* PyDict_FromMap(map* t){
 	  fprintf(stderr,"Unable to set key value pair...");
 	  return NULL;
 	}
+#if PY_MAJOR_VERSION >= 3
+	if(PyDict_SetItem(res,PyUnicode_FromString(tmap->name),mvalue)<0){
+#else
 	if(PyDict_SetItem(res,PyString_FromString(tmap->name),mvalue)<0){
+#endif
 	  fprintf(stderr,"Unable to set key value pair...");
 	  return NULL;
 	}
 	if(hasSize>0)
+#if PY_MAJOR_VERSION >= 3
+	  if(PyDict_SetItem(res,PyUnicode_FromString("size"),svalue)<0){
+#else
 	  if(PyDict_SetItem(res,PyString_FromString("size"),svalue)<0){
+#endif
 	    fprintf(stderr,"Unable to set key value pair...");
 	    return NULL;
 	  }
       }
       else if(size!=NULL){
-	PyObject* value=PyString_FromStringAndSize(tmp->value,atoi(size->value));
+	PyObject* value=
+#if PY_MAJOR_VERSION >= 3
+	  PyUnicode_FromStringAndSize(tmp->value,atoi(size->value));
+#else
+	  PyString_FromStringAndSize(tmp->value,atoi(size->value));
+#endif
 	if(PyDict_SetItem(res,name,value)<0){
 	  fprintf(stderr,"Unable to set key value pair...");
 	  return NULL;
 	}
       }
       else{
-	PyObject* value=PyString_FromString(tmp->value);
+	PyObject* value=
+#if PY_MAJOR_VERSION >= 3
+	  PyUnicode_FromString(tmp->value);
+#else
+	  PyString_FromString(tmp->value);
+#endif
 	if(PyDict_SetItem(res,name,value)<0){
 	  fprintf(stderr,"Unable to set key value pair...");
 	  return NULL;
@@ -327,7 +477,12 @@ PyDictObject* PyDict_FromMap(map* t){
     }
     else{
       if(PyDict_GetItem(res,name)==NULL){
-	PyObject* value=PyString_FromString(tmp->value);
+	PyObject* value=
+#if PY_MAJOR_VERSION >= 3
+	  PyUnicode_FromString(tmp->value);
+#else
+	  PyString_FromString(tmp->value);
+#endif
 	if(PyDict_SetItem(res,name,value)<0){
 	  fprintf(stderr,"Unable to set key value pair...");
 	  return NULL;
@@ -357,7 +512,11 @@ maps* mapsFromPyDict(PyDictObject* t){
 	    PyString_AsString(key),PyString_AsString(value));
 #endif
     cursor=(maps*)malloc(MAPS_SIZE);
+#if PY_MAJOR_VERSION >= 3
+    cursor->name=_PyUnicode_AsString(key);
+#else
     cursor->name=PyString_AsString(key);
+#endif
     cursor->content=mapFromPyDict((PyDictObject*)value);
 #ifdef DEBUG
     dumpMap(cursor->content);
@@ -390,14 +549,30 @@ map* mapFromPyDict(PyDictObject* t){
     fprintf(stderr,">> DEBUG VALUES : %s => %s\n",
 	    PyString_AsString(key),PyString_AsString(value));
 #endif
+#if PY_MAJOR_VERSION >= 3
+    if(strcmp(_PyUnicode_AsString(key),"value")==0){
+#else
     if(strcmp(PyString_AsString(key),"value")==0){
+#endif
       char *buffer=NULL;
       Py_ssize_t size;
+#if PY_MAJOR_VERSION >= 3
+      buffer=_PyUnicode_AsStringAndSize(value,&size);
+#else
       PyString_AsStringAndSize(value,&buffer,&size);
+#endif
       if(res!=NULL){
+#if PY_MAJOR_VERSION >= 3
+	addToMap(res,_PyUnicode_AsString(key),"");
+#else
 	addToMap(res,PyString_AsString(key),"");
+#endif
       }else{
+#if PY_MAJOR_VERSION >= 3
+	res=createMap(_PyUnicode_AsString(key),"");
+#else
 	res=createMap(PyString_AsString(key),"");
+#endif
       }
       map* tmpR=getMap(res,"value");
       free(tmpR->value);
@@ -408,10 +583,21 @@ map* mapFromPyDict(PyDictObject* t){
       sprintf(sin,"%d",size);
       addToMap(res,"size",sin);
     }else{
-      if(res!=NULL)
+      if(res!=NULL){
+#if PY_MAJOR_VERSION >= 3
+	addToMap(res,_PyUnicode_AsString(key),_PyUnicode_AsString(value));
+#else
 	addToMap(res,PyString_AsString(key),PyString_AsString(value));
-      else
-	res=createMap(PyString_AsString(key),PyString_AsString(value));
+#endif
+      }
+      else{
+	res=
+#if PY_MAJOR_VERSION >= 3
+	  createMap(_PyUnicode_AsString(key),_PyUnicode_AsString(value));
+#else
+	  createMap(PyString_AsString(key),PyString_AsString(value));
+#endif
+      }
     }
   }
   return res;
@@ -427,7 +613,11 @@ PythonTranslate(PyObject* self, PyObject* args)
 #endif
     return NULL;
   }
+#if PY_MAJOR_VERSION >= 3
+  return PyUnicode_FromString(_ss(str));
+#else
   return PyString_FromString(_ss(str));
+#endif
 }
 
 PyObject*
@@ -455,7 +645,12 @@ PythonUpdateStatus(PyObject* self, PyObject* args)
   {
     PyObject* lenv = PyMapping_GetItemString(confdict, "lenv");
     if (lenv && PyMapping_Check(lenv)){
-      PyObject* valobj = PyString_FromString(status);
+      PyObject* valobj = 
+#if PY_MAJOR_VERSION >= 3
+	PyUnicode_FromString(status);
+#else
+	PyString_FromString(status);
+#endif
       PyMapping_SetItemString(lenv, "status", valobj);
       Py_DECREF(valobj);
     }
